style/index.css
/* ... */
.title-flower{
    width: 160px;
    position: absolute;
    left: 35%;
}
#text{
    font-family: 'Mecknight 400','sans-serif';
    color: #DFC69D;
}
#groom-text{
    /* border: 1px solid pink; */
    font-size: 4.5rem;
    position: absolute;
    top: 9%;
    left: 8%;

}
#bride-text{
    /* border: 1px solid pink; */
    font-size: 4.5rem;
    position: absolute;
    bottom: 50%;
    right: 9%;

}
img[alt="and"]{
    width: 6%;
    position: absolute;
    left: 50%;
    top: 23%;
}
#wedding-info{
    font-family: 'Belgrano', serif;
    text-transform: uppercase;
    /* border: 2px dotted salmon; */
    width: 75%;
    position: absolute;
    bottom: 9%;
    line-height: 40px;
    word-spacing: 5px;
    letter-spacing: 5px;
    font-size: 1.1rem;
    left: 10%;
}
svg{
    fill: #DFC69D;
    width: 25px;
    height: 25px;
}
.info-details{
    padding :5px 15px;
    /* border: 1px solid dodgerblue; */
    display: flex;
    flex-direction: row;
    text-align: left;
    align-items: center;
    justify-content: space-between;
    justify-self: center;
}

/* ********************************************************* */
/* Black floral design background */
.design-bg{
    height: 100vh;
    position: relative;
    /* width: 100vw; */
    background-color: #14191F;
    background-image: url('../images/OurStory/BACKGROUND.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

/* ******************************************************** */
/* OUR STORY */

#our-story{
    position: relative;
    height: 100vh;
    overflow: hidden;
}
#our-story-title{
    font-family: 'BUTTERSHINE SERIF';
    color: #DFC69D;
    font-size: 5.8rem;
    margin-left: 45px;
    position: absolute;
    top: 10%;
    left: 2%;
}
#our-story-content{
    /* border: 2px dotted red; */
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    /* align-items: center; */
    padding: 30px;
    position: absolute;
    bottom: 10%;
}
#our-story-content p{
    font-family: 'Belgrano', serif;
    color: #BCC6AE;
    font-size: 1.5rem;
    /* border: 1px solid dodgerblue; */
    width: 48%;
    text-align: justify;
    word-spacing: 5px;
    /* margin-left: 10px; */
    /* margin-top: 20px; */
    letter-spacing: 3px;
    line-height: 33px;
}
#couple-img{
    width: 500px;
}

#top-left-leaf{
    position: absolute;
    width: 15%;
    left: 0px;
    top: 25px;
}
#top-right-leaf{
    position: absolute;
    right: -23px;
    top: 0px;
    width: 15%;
}
#bottom-left-flower{
    position: absolute;
    bottom: 0px;
    left: 0px;
    width: 10%;
}

/* ***************************************************** */
/* TIMELINE */
#timeline{
    position: relative;
    height: 100vh;

    overflow: hidden;
}
#timeline-title{
    font-family: 'BUTTERSHINE SERIF';
    color: #DFC69D;
    font-size: 5.8rem;
    letter-spacing: 5px;
    margin-left: 45px;
    position: absolute;
    top: 5%;
    left: 2%;
}
#timeline-scale{
    /* border: 2px solid royalblue; */
    position: absolute;
    width: 98vw;
    height: 70vh;
    bottom: 10%;
}
#timeline-scale-main img{
    width: 90%;
    position: absolute;
    left: 5%;
    bottom: 40%;
    z-index: 2;
}
.timeline-scale-stickers{
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: space-around;
    align-items: center;
}
.timeline-events{
    width: 85%;
    padding: 5px;
    margin-top: 10px;
}
.timeline-event-title{
    color: #DFC69D;
    font-family: "Zeviero 400";
    font-size: 1.8rem;
}
.timeline-event-time{
    color: #DFC69D;
    font-family: 'Belgrano', serif;
    margin-bottom: 10px;
}
.up-stick{
    transform: rotate(180deg);
}
#timeline-scale-stick1{
    position: absolute;
    /* border: 2px solid darkcyan; */
    left: 5%;
    bottom: 0px;
    z-index: 1;
}

#timeline-scale-stick2{
    position: absolute;
    top: 54px;
    z-index: 1;
    left: 20%;
}
#timeline-scale-stick3{
    position: absolute;
    bottom: 0px;
    z-index: 1;
    left: 35%;
}
img[alt="cutting-cake"]{
    width: 62%;
    margin: 0px;
}
#timeline-scale-stick4{
    position: absolute;
    top: 91px;
    z-index: 1;
    left: 50%;
}
#timeline-scale-stick5{
    position: absolute;
    bottom: 0px;
    z-index: 1;
    right: 17%;
}
img[alt="party"]{
    width: 73%;
}
#timeline-scale-stick6{
    position: absolute;
    top: 78px;
    z-index: 1;
    right: 6%;
}

#timeline-title-frekle1{
    position: absolute;
    left: 0px;
}
#timeline-title-frekle2{
    position: absolute;
    left: 104px;
    top: 40px;
}
#timeline-title-frekle3{
    position: absolute;
    left: 250px;
    top: 7px;
}
#timeline-title-frekle4{

    position: absolute;
    left: 420px;
    top: 11px;

}

#timeline-top-left-flower{
    position: absolute;
    left: -26px;
    top: -143px;
}
#timeline-top-right-flower{
    position: absolute;
    right: 0px;
    top: -39px;
    width: 13%;
}
#timeline-top-right-frekle{
    position: absolute;
    right: -3px;
    top: 3px;
}
#timeline-bottom-right-frekle{
    position: absolute;
    right: 10px;
    bottom: -12px;
}
#timeline-bottom-right-leaf{
    position: absolute;
    bottom: -30px;
    right: -3px;
}
/* ***************************************************** */
/* Gallery */
/* ***************************************************** */
#gallery{
    position: relative;
    height: 100vh;
    /* border: 2px solid greenyellow; */
}
#gallery-title{
    font-family: 'BUTTERSHINE SERIF';
    color: #DFC69D;
    font-size: 5.8rem;
    letter-spacing: 5px;
    margin-left: 45px;
    position: absolute;
    top: 5%;
    left: 2%;
}
#gallery-photos-container{
    /* border: 1px solid #fff; */
    position: absolute;
    width: 83vw;
    height: 65vh;
    bottom: 106px;
    left: 80px;

    overflow: auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
/* ... */

